Fix image overflow

--- a/src/app/main/funko-card/funko-card.component.scss
+++ b/src/app/main/funko-card/funko-card.component.scss
@@ -5,7 +5,7 @@
     display: grid;
     align-content: space-between;
     font-family: 'Komika Axis';
-
+    overflow: hidden;
     border: solid black;
     border-width: 3px 4px 3px 5px;
     border-radius: 95% 4% 92% 5%/4% 95% 6% 95%;
